Fixed the spacing a bit

--- a/style/index.css
+++ b/style/index.css
@@ -323,7 +323,7 @@ footer {
 	/* Media for Projects Section */
 
 	.row div {
-		width: 40%;
+		width: 45%;
 	}
 
 	/* Media for Footer Section */
